Fix spacing

--- a/src/Elastic.Markdown/Assets/markdown/admonition.css
+++ b/src/Elastic.Markdown/Assets/markdown/admonition.css
@@ -10,6 +10,10 @@
 		}
 		.admonition-content {
 			@apply px-4;
+			
+			& > *:first-child {
+				@apply mt-3!;
+			}
 		}
 		
 		&.note {
